Export org.mockito/org.mockito.internal.creation.bytebuddy to org.assertj.core