@@ -31,6 +31,7 @@
       <!-- org.mockito -->
       --add-exports org.mockito/org.mockito.internal=java.instrument
       --add-exports org.mockito/org.mockito.internal.creation.bytebuddy=hamcrest.core
+      --add-exports org.mockito/org.mockito.internal.creation.bytebuddy=org.assertj.core
     </argLine>
     <rootDirectory>${project.basedir}/../../../</rootDirectory>
     <spotless.skip>false</spotless.skip>
